--- a/client/lobby/lobby.ui
+++ b/client/lobby/lobby.ui
@@ -168,13 +168,13 @@
    <string>Duck Game</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QPushButton" name="createOnePlayerMatchButton">
     <property name="geometry">
      <rect>
-      <x>290</x>
-      <y>170</y>
-      <width>231</width>
-      <height>81</height>
+      <x>180</x>
+      <y>120</y>
+      <width>451</width>
+      <height>71</height>
      </rect>
     </property>
     <property name="font">
@@ -188,16 +188,16 @@
      <cursorShape>PointingHandCursor</cursorShape>
     </property>
     <property name="text">
-     <string>Create Match</string>
+     <string>Create 1P Match</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_2">
+   <widget class="QPushButton" name="joinMatchButton">
     <property name="geometry">
      <rect>
-      <x>290</x>
-      <y>300</y>
-      <width>231</width>
-      <height>81</height>
+      <x>180</x>
+      <y>200</y>
+      <width>451</width>
+      <height>71</height>
      </rect>
     </property>
     <property name="font">
@@ -209,6 +209,9 @@
     </property>
     <property name="cursor">
      <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="autoFillBackground">
+     <bool>false</bool>
     </property>
     <property name="text">
      <string>Join Match</string>
@@ -218,7 +221,7 @@
     <property name="geometry">
      <rect>
       <x>270</x>
-      <y>70</y>
+      <y>40</y>
       <width>271</width>
       <height>71</height>
      </rect>
@@ -260,6 +263,52 @@
      <set>Qt::AlignmentFlag::AlignCenter</set>
     </property>
    </widget>
+   <widget class="QPushButton" name="createTwoPlayerMatchButton">
+    <property name="geometry">
+     <rect>
+      <x>180</x>
+      <y>280</y>
+      <width>451</width>
+      <height>71</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Uroob</family>
+      <pointsize>25</pointsize>
+      <bold>false</bold>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="text">
+     <string>Create 2P Match</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="createThreePlayerMatchButton">
+    <property name="geometry">
+     <rect>
+      <x>180</x>
+      <y>360</y>
+      <width>451</width>
+      <height>71</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Uroob</family>
+      <pointsize>25</pointsize>
+      <bold>false</bold>
+     </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="text">
+     <string>Create 3P Match</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -276,3 +325,4 @@
  <resources/>
  <connections/>
 </ui>
+
