--- a/client/lobby/lobby.ui
+++ b/client/lobby/lobby.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>800</width>
-    <height>600</height>
+    <height>680</height>
    </rect>
   </property>
   <property name="palette">
@@ -248,7 +248,7 @@
     <property name="geometry">
      <rect>
       <x>270</x>
-      <y>440</y>
+      <y>580</y>
       <width>271</width>
       <height>71</height>
      </rect>
@@ -294,6 +294,32 @@
      <bool>false</bool> <!-- Initially hidden -->
     </property>
    </widget>
+   <!-- lista de partidas -->
+   <widget class="QScrollArea" name="scrollArea">
+    <property name="geometry">
+      <rect>
+      <x>50</x>
+      <y>300</y>
+      <width>700</width>
+      <height>250</height>
+      </rect>
+    </property>
+    <property name="widgetResizable">
+      <bool>true</bool>
+    </property>
+    <widget class="QWidget" name="scrollAreaWidgetContents">
+      <property name="geometry">
+      <rect>
+        <x>0</x>
+        <y>300</y>
+        <width>600</width>
+        <height>350</height>
+      </rect>
+      </property>
+      <layout class="QVBoxLayout" name="verticalLayout"/>
+    </widget>
+   </widget>
+
    <!-- <widget class="QPushButton" name="createTwoPlayerMatchButton">
     <property name="geometry">
      <rect>
