lobbyloop funcional, falta reset de juego y cambio de gameplay y graceful shutdown

--- a/client/lobby/lobby.ui
+++ b/client/lobby/lobby.ui
@@ -189,7 +189,7 @@
      <cursorShape>PointingHandCursor</cursorShape>
     </property>
     <property name="text">
-     <string>PLAY</string>
+     <string>Create Match</string>
     </property>
    </widget>
    <!-- botón para refresh -->
