--- a/client/lobby/lobby.ui
+++ b/client/lobby/lobby.ui
@@ -267,7 +267,7 @@
      </font>
     </property>
     <property name="text">
-     <string>v. 0.0.1 demo</string>
+     <string>v. 1.0.0</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignmentFlag::AlignCenter</set>
